[project]
name = "dsp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "cupofc0t", email = "cupofc0t@gmail.com" }
]
dependencies = [
    "pyserial>=3.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"dsp" = "dsp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dsp"]
